{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 252,
  "lineage": "281bc45a-bff2-afa5-b050-8c9632bb102e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:vpc/vpc-0b406d94bf4ca6dc8",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06b2a46a2cc6c7930",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-92151ae9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b406d94bf4ca6dc8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0db1302fea11dc0f5",
            "owner_id": "540828511394",
            "tags": {
              "Name": "elcy-dev",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:540828511394:loadbalancer/app/test-ecs-lb/712b5b8a6db1db09",
            "arn_suffix": "app/test-ecs-lb/712b5b8a6db1db09",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-ecs-lb-1141286006.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:540828511394:loadbalancer/app/test-ecs-lb/712b5b8a6db1db09",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-ecs-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e6c26b8719bcfea5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-011a56c214c7d7544"
              },
              {
                "subnet_id": "subnet-01e3af91da9cd6287"
              },
              {
                "subnet_id": "subnet-08e9593f04c89e893"
              }
            ],
            "subnets": [
              "subnet-011a56c214c7d7544",
              "subnet-01e3af91da9cd6287",
              "subnet-08e9593f04c89e893"
            ],
            "tags": {
              "project_owner": "Appslab"
            },
            "tags_all": {
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b406d94bf4ca6dc8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:540828511394:listener/app/test-ecs-lb/712b5b8a6db1db09/8676ad1d6624b4d6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:540828511394:targetgroup/masha-target-group/1fd1cbf635f74150",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:540828511394:listener/app/test-ecs-lb/712b5b8a6db1db09/8676ad1d6624b4d6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:540828511394:loadbalancer/app/test-ecs-lb/712b5b8a6db1db09",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "environment": "dev",
              "project": "Every-shilling",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test-lb",
            "aws_lb_target_group.lb_target_group",
            "aws_security_group.sg",
            "data.aws_vpc.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:540828511394:targetgroup/masha-target-group/1fd1cbf635f74150",
            "arn_suffix": "targetgroup/masha-target-group/1fd1cbf635f74150",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:540828511394:targetgroup/masha-target-group/1fd1cbf635f74150",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "masha-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "environment": "dev",
              "project": "Every-shilling",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:security-group/sg-0e3bc23517006f766",
            "description": "allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3bc23517006f766",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-ec2",
            "name_prefix": "",
            "owner_id": "540828511394",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elcy"
            },
            "tags_all": {
              "Name": "elcy",
              "environment": "dev",
              "project": "Every-shilling",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:security-group/sg-0e6c26b8719bcfea5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6c26b8719bcfea5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4010,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4010
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "elcy-dev",
            "name_prefix": "",
            "owner_id": "540828511394",
            "revoke_rules_on_delete": false,
            "tags": {
              "project_owner": "Appslab"
            },
            "tags_all": {
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:540828511394:instance/i-0e722a1fac188dd31",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e722a1fac188dd31",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elcy-dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-015e2c4a75183063c",
            "private_dns": "ip-10-0-101-151.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.151",
            "public_ip": "52.90.69.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03022dcefe51612f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e3af91da9cd6287",
            "tags": {
              "Name": "elcy-dev",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "elcy-dev"
            },
            "vpc_security_group_ids": [
              "sg-0e6c26b8719bcfea5"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.sg",
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0368bae3e707c1ae6",
            "association_id": "eipassoc-0841e5ac386631537",
            "domain": "vpc",
            "id": "eipalloc-0368bae3e707c1ae6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05e506c85bad9848f",
            "private_dns": "ip-10-0-101-173.ec2.internal",
            "private_ip": "10.0.101.173",
            "public_dns": "ec2-3-234-29-107.compute-1.amazonaws.com",
            "public_ip": "3.234.29.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elcy-dev-us-east-1a",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-us-east-1a",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b7f4a43d8b642a0",
            "association_id": "eipassoc-0e2cffc99c7169663",
            "domain": "vpc",
            "id": "eipalloc-01b7f4a43d8b642a0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f3d720f85f8e6629",
            "private_dns": "ip-10-0-102-44.ec2.internal",
            "private_ip": "10.0.102.44",
            "public_dns": "ec2-54-225-174-132.compute-1.amazonaws.com",
            "public_ip": "54.225.174.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elcy-dev-us-east-1b",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-us-east-1b",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bfa2bb944296197",
            "association_id": "eipassoc-03f92b3548580f516",
            "domain": "vpc",
            "id": "eipalloc-04bfa2bb944296197",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a86cde9258f2936c",
            "private_dns": "ip-10-0-103-212.ec2.internal",
            "private_ip": "10.0.103.212",
            "public_dns": "ec2-18-215-8-182.compute-1.amazonaws.com",
            "public_ip": "18.215.8.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elcy-dev-us-east-1c",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-us-east-1c",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:internet-gateway/igw-04c42833c977bdb8b",
            "id": "igw-04c42833c977bdb8b",
            "owner_id": "540828511394",
            "tags": {
              "Name": "elcy-dev",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0368bae3e707c1ae6",
            "connectivity_type": "public",
            "id": "nat-01e3f41402164f7f2",
            "network_interface_id": "eni-05e506c85bad9848f",
            "private_ip": "10.0.101.173",
            "public_ip": "3.234.29.107",
            "subnet_id": "subnet-01e3af91da9cd6287",
            "tags": {
              "Name": "elcy-dev-us-east-1a",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-us-east-1a",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b7f4a43d8b642a0",
            "connectivity_type": "public",
            "id": "nat-0efa0a3b26afc33fc",
            "network_interface_id": "eni-0f3d720f85f8e6629",
            "private_ip": "10.0.102.44",
            "public_ip": "54.225.174.132",
            "subnet_id": "subnet-011a56c214c7d7544",
            "tags": {
              "Name": "elcy-dev-us-east-1b",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-us-east-1b",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bfa2bb944296197",
            "connectivity_type": "public",
            "id": "nat-0dbce61d910e0c688",
            "network_interface_id": "eni-0a86cde9258f2936c",
            "private_ip": "10.0.103.212",
            "public_ip": "18.215.8.182",
            "subnet_id": "subnet-08e9593f04c89e893",
            "tags": {
              "Name": "elcy-dev-us-east-1c",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-us-east-1c",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d1da3bb206bbf7e11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01e3f41402164f7f2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d1da3bb206bbf7e1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c9456702c2725cce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0efa0a3b26afc33fc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9456702c2725cce",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fed0a7b784fed54c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dbce61d910e0c688",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fed0a7b784fed54c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04c42833c977bdb8b",
            "id": "r-rtb-03403f7eea78b30671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03403f7eea78b3067",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:route-table/rtb-0d1da3bb206bbf7e1",
            "id": "rtb-0d1da3bb206bbf7e1",
            "owner_id": "540828511394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01e3f41402164f7f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elcy-dev-private-us-east-1a",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-private-us-east-1a",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:route-table/rtb-0c9456702c2725cce",
            "id": "rtb-0c9456702c2725cce",
            "owner_id": "540828511394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0efa0a3b26afc33fc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elcy-dev-private-us-east-1b",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-private-us-east-1b",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:route-table/rtb-0fed0a7b784fed54c",
            "id": "rtb-0fed0a7b784fed54c",
            "owner_id": "540828511394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dbce61d910e0c688",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elcy-dev-private-us-east-1c",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-private-us-east-1c",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:route-table/rtb-03403f7eea78b3067",
            "id": "rtb-03403f7eea78b3067",
            "owner_id": "540828511394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c42833c977bdb8b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elcy-dev-public",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-public",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b1346c602ddd578",
            "route_table_id": "rtb-0d1da3bb206bbf7e1",
            "subnet_id": "subnet-0a0ef0d23dc96fc2a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0676204af12467d2e",
            "route_table_id": "rtb-0c9456702c2725cce",
            "subnet_id": "subnet-007bc101e049e4a96"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ac5170c84ad453d",
            "route_table_id": "rtb-0fed0a7b784fed54c",
            "subnet_id": "subnet-015a227fadd97ae04"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9187608ec10a693",
            "route_table_id": "rtb-03403f7eea78b3067",
            "subnet_id": "subnet-01e3af91da9cd6287"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0203f58bd88feb7aa",
            "route_table_id": "rtb-03403f7eea78b3067",
            "subnet_id": "subnet-011a56c214c7d7544"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01224395423925aa3",
            "route_table_id": "rtb-03403f7eea78b3067",
            "subnet_id": "subnet-08e9593f04c89e893"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-0a0ef0d23dc96fc2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0ef0d23dc96fc2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "elcy-dev-private-us-east-1a",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-private-us-east-1a",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-007bc101e049e4a96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007bc101e049e4a96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "elcy-dev-private-us-east-1b",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-private-us-east-1b",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-015a227fadd97ae04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015a227fadd97ae04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "elcy-dev-private-us-east-1c",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-private-us-east-1c",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-01e3af91da9cd6287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e3af91da9cd6287",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "elcy-dev-public-us-east-1a",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-public-us-east-1a",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-011a56c214c7d7544",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011a56c214c7d7544",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "elcy-dev-public-us-east-1b",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-public-us-east-1b",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-08e9593f04c89e893",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e9593f04c89e893",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "elcy-dev-public-us-east-1c",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev-public-us-east-1c",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            },
            "vpc_id": "vpc-0b406d94bf4ca6dc8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:vpc/vpc-0b406d94bf4ca6dc8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05749dfe5d9c129cf",
            "default_route_table_id": "rtb-0db1302fea11dc0f5",
            "default_security_group_id": "sg-0a877f93f5dc3ab81",
            "dhcp_options_id": "dopt-92151ae9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b406d94bf4ca6dc8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db1302fea11dc0f5",
            "owner_id": "540828511394",
            "tags": {
              "Name": "elcy-dev",
              "project_owner": "Appslab"
            },
            "tags_all": {
              "Name": "elcy-dev",
              "environment": "dev",
              "project": "Every-shilling",
              "project_owner": "Appslab",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling-Terraform",
              "terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}